# Cortex-AI

./: .cortexignore  .dockerignore  .gitignore  AUTORESEARCH_PLAN.md  AUTORESEARCH_README.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  CONVENTIONS.md  DEPENDENCIES.md  Dockerfile  FRICTION_REGISTRY.md  GIT_FOR_AI_MEMORY.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  autoresearch.py  autoresearch_chain.py  cortex-hook.py  docker-compose.yml  eval.py  generate_corpus.py  marketplace.json  migrate.py  program.md  psycopg.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: manifest.json
.cortex/: .gitignore  api_keys.json  identity.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: beta_feedback.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  memory-review.yml  pages-site.yml  publish-npm.yml  publish.yml
assets/: demo-api.tape  demo-own.tape  demo-share.tape
assets/demo-data/: context.json  conversations.json
assets/video/: build_videos.sh
autoresearch_targets/: __init__.py  common.py  targets.py
autoresearch_targets/contradictions/: eval.py  generate_corpus.py  program.md
autoresearch_targets/dedup/: eval.py  generate_corpus.py  program.md
autoresearch_targets/edge_extraction/: eval.py  generate_corpus.py  program.md
autoresearch_targets/extract_coding/: eval.py  generate_corpus.py  program.md
autoresearch_targets/intelligence/: eval.py  generate_corpus.py  program.md
autoresearch_targets/query_mapping/: eval.py  generate_corpus.py  program.md
autoresearch_targets/search/: eval.py  generate_corpus.py  program.md
autoresearch_targets/timeline/: eval.py  generate_corpus.py  program.md
benchmarks/: README.md  benchmark_etag.py  locustfile.py  profile_memory.py
benchmarks/scenarios/: __init__.py  auth_flow.py  mixed.py  read_heavy.py  write_heavy.py
cortex/: __init__.py  __main__.py  _hook.py  adapters.py  atomic_io.py  auth.py  backup.py  benchmark.py  centrality.py  channel_runtime.py  claims.py  cli.py  cli_entrypoint.py  cli_extract_commands.py  cli_graph_commands.py  cli_graph_version_commands.py  cli_mind_pack_commands.py  cli_misc_commands.py  cli_parser.py  cli_parser_extract.py  cli_parser_graph.py  cli_parser_portable.py  cli_parser_runtime_misc.py  cli_portable_commands.py  cli_runtime.py  cli_runtime_commands.py  cli_scope_guard.py  cli_surface.py  cli_workspace_commands.py  client.py  coding.py  compat.py  completion.py  config.py  connectors.py  context.py  continuous.py  contradictions.py  cooccurrence.py  dedup.py  (+84 more)
cortex/agent/: __init__.py  conflict_monitor.py  context_dispatcher.py  events.py
cortex/audience/: __init__.py  policy.py  templates.py
cortex/caas/: __init__.py  api_keys.py  archive.py  audit_export.py  audit_ledger.py  caching.py  circuit_breaker.py  config.py  connectors.py  correlation.py  dead_letter.py  encryption.py  event_buffer.py  (+25 more)
demos/: README_DEMOS.md  audience.cast  demo_audience.py  demo_portability.py  demo_retraction.py  portability.cast  retraction.cast
deploy/: .env.example  Caddyfile  cortex.ini  cortex.service  nginx.conf  prometheus.yml  self-host-starter.sh
docs/: AGENT_QUICKSTARTS.md  BETA_QUICKSTART.md  BRAINPACKS.md  CHANNEL_INTEGRATIONS.md  CLI_UNIFICATION_PRD.md  CLI_V2.md  CORTEX_MIND_PRD.md  EXTRACTION.md  EXTRACTION_EVAL.md  HERMES_QUICKSTART.md  INGEST_FORMATS.md  MANUS_QUICKSTART.md  MINDS.md  OPENCLAW_NATIVE_PLUGIN.md  OPENCLAW_QUICKSTART.md  OPERATIONS.md  PLATFORM_ONBOARDING.md  PORTABILITY.md  RELEASE_CHECKLIST.md  SELF_HOSTING.md  THREAT_MODEL.md  UPGRADING.md  architecture.md  beta-deployment.md  beta-tester-guide.md  cli-walkthrough.md  codebase-feature-guide.md  cortex-api.postman_collection.json  cortex-roadmap-v2.md  dependency-audit.md  deployment.md  development.md  error-guide.md  overview.md  pentest-plan.md  quickstart-python.md  quickstart-typescript.md  security-checklist.md  security.md  threat-model.md  (+5 more)
openapi/: cortex-api-v1-compat.json  cortex-api-v1.json
sdk/python/: README.md  pyproject.toml
sdk/python/cortex_sdk/: __init__.py  client.py  exceptions.py  pagination.py  types.py
spec/: openapi.json  upai-v1.0.md
tests/: test_adapters.py  test_api_keys.py  test_archive.py  test_asgi_parity.py  test_atomic_io.py  test_atomic_persistence.py  test_attestations.py  test_audience_policy.py  test_audit_export.py  test_audit_ledger.py  test_auth.py  test_backup.py  test_benchmark.py  test_benchmark_scenarios.py  test_caas_cli.py  test_caas_credentials.py  test_caas_hardening.py  test_caas_metrics.py  test_caas_oauth.py  test_caas_policies.py  test_caas_server.py  test_channel_runtime.py  test_claims.py  test_cli_connect.py  test_cli_help.py  test_cli_hints.py  test_cli_remember_scope.py  test_cli_smoke.py  test_cli_sqlite.py  test_cli_v2_retirement.py  test_cli_v2_shim.py  test_cli_versions.py  test_coding.py  test_completion.py  test_config.py  test_connectors.py  test_console_script_deprecation_clean.py  test_context.py  test_continuous.py  test_contradictions.py  (+115 more)
website/: README.md  how-it-works.html  index.html  learn.html  script.js  styles.css
(+287 files in other folders)
