[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-identity"
version = "1.4.1"
description = "Own your AI memory. Take it everywhere."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Junebugg1214"}]
keywords = ["ai-identity", "knowledge-graph", "chatgpt", "claude", "memory", "portable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Junebugg1214/Cortex-AI"
Repository = "https://github.com/Junebugg1214/Cortex-AI"
Issues = "https://github.com/Junebugg1214/Cortex-AI/issues"

[project.optional-dependencies]
crypto = ["pynacl>=1.5.0"]
fast = ["numpy>=1.24.0"]
postgres = ["psycopg[binary]>=3.1"]
full = ["pynacl>=1.5.0", "numpy>=1.24.0", "psycopg[binary]>=3.1"]
dev = ["pytest>=7.0", "pynacl>=1.5.0"]

[project.scripts]
cortex = "cortex.cli:main"
cortex-hook = "cortex._hook:main"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.setuptools.package-data]
"cortex.caas.webapp" = ["*.html", "*.css", "*.js", "pages/*.html", "pages/*.js"]
"cortex.caas.dashboard" = ["*.html", "*.css", "*.js", "pages/*.html", "pages/*.js"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
