[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-identity"
version = "1.6.0"
description = "Own your AI memory. Take it everywhere."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Junebugg1214"}]
dependencies = ["tomli>=2.0; python_version < '3.11'"]
keywords = ["ai-identity", "knowledge-graph", "chatgpt", "claude", "memory", "portable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Junebugg1214/Cortex-AI"
Repository = "https://github.com/Junebugg1214/Cortex-AI"
Issues = "https://github.com/Junebugg1214/Cortex-AI/issues"
Documentation = "https://github.com/Junebugg1214/Cortex-AI/blob/main/docs/SELF_HOSTING.md"
Changelog = "https://github.com/Junebugg1214/Cortex-AI/blob/main/CHANGELOG.md"

[project.optional-dependencies]
asgi = ["starlette>=0.37.0", "uvicorn>=0.30.0"]
crypto = ["pynacl>=1.5.0"]
embeddings = ["sentence-transformers>=2.7.0"]
fast = ["numpy>=1.24.0"]
model = ["pydantic>=2.6"]
server = ["pynacl>=1.5.0"]
full = [
    "pynacl>=1.5.0",
    "numpy>=1.24.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "sentence-transformers>=2.7.0",
    "pydantic>=2.6",
]
dev = ["pytest>=7.0", "pynacl>=1.5.0", "ruff>=0.6.0", "starlette>=0.37.0", "uvicorn>=0.30.0"]

[project.scripts]
cortex = "cortex.cli:main"
cortex-hook = "cortex._hook:main"
cortexd = "cortex.server:main"
cortex-mcp = "cortex.mcp:main"
cortex-manus = "cortex.manus_bridge:main"
cortex-bench = "cortex.benchmark:main"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.setuptools.package-data]
cortex = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
mccabe.max-complexity = 15

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
