[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-ai-sdk"
version = "1.4.0"
description = "Python SDK for the Cortex CaaS API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Junebugg1214"}]
keywords = ["cortex", "ai-identity", "knowledge-graph", "sdk", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
async = ["httpx>=0.24.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Junebugg1214/Cortex-AI"
Repository = "https://github.com/Junebugg1214/Cortex-AI"
Issues = "https://github.com/Junebugg1214/Cortex-AI/issues"

[tool.setuptools.packages.find]
include = ["cortex_sdk*"]
